backend/mobipay_backend/src/main/java/com/example/mobipay/domain/postpayments/error/CardTransactionServerError.java
package com.example.mobipay.domain.postpayments.error;

public class CardTransactionServerError extends RuntimeException {

    public CardTransactionServerError() {
    }

    public CardTransactionServerError(String message) {
        super(message);
    }

    @Override
    public synchronized Throwable fillInStackTrace() {
        return this;
    }

}
